// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TimeSelector > should render correctly when disabled 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group"
  >
    <div
      class="govuk-form-group "
      id="field-1"
    >
      <div>
        <label
          class="govuk-label govuk-label--s"
          for="field-1-input"
        >
          Start time
        </label>
      </div>
      <div
        class="mt-auto"
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <input
              aria-describedby=""
              class="govuk-input govuk-date-input__input govuk-input--width-4"
              disabled=""
              id="field-1-input"
              name="field1"
              placeholder="N/A"
              type="text"
              value="three thirty"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TimeSelector > should render correctly with errors 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group"
  >
    <div
      class="govuk-form-group "
      id="field-1"
    >
      <div>
        <label
          class="govuk-label govuk-label--s"
          for="field-1-input"
        >
          Start time
        </label>
      </div>
      <div
        class="govuk-hint"
        id="field-1-hint"
      >
        Test Hint
      </div>
      <div
        class="mt-auto"
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <input
              aria-describedby="field-1-hint"
              class="govuk-input govuk-date-input__input govuk-input--width-4"
              id="field-1-input"
              name="field1"
              placeholder="hhmm"
              type="text"
              value="three thirty"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TimeSelector > should render correctly with inputs 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group"
  >
    <div
      class="govuk-form-group "
      id="field-1"
    >
      <div>
        <label
          class="govuk-label govuk-label--s"
          for="field-1-input"
        >
          Start time
        </label>
      </div>
      <div
        class="mt-auto"
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <input
              aria-describedby=""
              class="govuk-input govuk-date-input__input govuk-input--width-4"
              id="field-1-input"
              name="field1"
              placeholder="hhmm"
              type="text"
              value="0900"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TimeSelector > should render correctly with no inputs 1`] = `
<DocumentFragment>
  <div
    class="govuk-form-group"
  >
    <div
      class="govuk-form-group "
      id="field-1"
    >
      <div>
        <label
          class="govuk-label govuk-label--s"
          for="field-1-input"
        >
          Start time
        </label>
      </div>
      <div
        class="mt-auto"
      >
        <div
          class=""
        >
          <div
            class=""
          >
            <input
              aria-describedby=""
              class="govuk-input govuk-date-input__input govuk-input--width-4"
              id="field-1-input"
              name="field1"
              placeholder="hhmm"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
